fix broken faq links #3831

--- a/faqs/_posts/0100-01-05-find-map.md
+++ b/faqs/_posts/0100-01-05-find-map.md
@@ -4,5 +4,5 @@ category: faqs
 question: "How do I find existing maps?"
 keywords:
   - users
-link_docs: "tutorials/users/maps"
+link_docs: "tutorials/users/managing_maps/index.html"
 ---
