--- a/faqs/_posts/0100-01-17-arch.md
+++ b/faqs/_posts/0100-01-17-arch.md
@@ -4,5 +4,5 @@ category: faqs
 question: "What is the GeoNode architecture?"
 keywords:
   - devs
-link_docs: "reference/architecture.html"
+link_docs: "tutorials/overview_and_ref/reference_doc/architecture.html"
 ---
