--- a/faqs/_posts/0100-01-11-ssl.md
+++ b/faqs/_posts/0100-01-11-ssl.md
@@ -4,5 +4,5 @@ category: faqs
 question: "How do I run GeoNode securely using SSL?"
 keywords:
   - admins
-link_docs: "tutorials/admin/ssl.html"
+link_docs: "tutorials/advanced/geonode_production/ssl.html"
 ---
