[#79] geonode.org bugs, content and visual representation.

--- a/faqs/_posts/0100-01-13-backups.md
+++ b/faqs/_posts/0100-01-13-backups.md
@@ -4,5 +4,5 @@ category: faqs
 question: "How do I backup my GeoNode configuration and data?"
 keywords:
   - admins
-link_docs: "tutorials/admin/backup_restore/index.html"
+link_docs: "intermediate/index.html#geonode-backup-and-restore"
 ---
