--- a/faqs/_posts/0100-01-15-env-dev.md
+++ b/faqs/_posts/0100-01-15-env-dev.md
@@ -4,5 +4,5 @@ category: faqs
 question: "How can I configure GeoNode for development?"
 keywords:
   - devs
-link_docs: "tutorials/devel/devel_env/index.html"
+link_docs: "install/core/index.html#run-geonode-for-the-first-time-in-debug-mode"
 ---
