[#79] geonode.org bugs, content and visual representation.

--- a/faqs/_posts/0100-01-16-testing.md
+++ b/faqs/_posts/0100-01-16-testing.md
@@ -4,5 +4,5 @@ category: faqs
 question: "How do I test GeoNode?"
 keywords:
   - devs
-link_docs: "tutorials/devel/geonode_testing/index.html"
+link_docs: "devel/docker/index.html#how-to-debug"
 ---
