--- a/faqs/_posts/0100-01-18-extend.md
+++ b/faqs/_posts/0100-01-18-extend.md
@@ -4,5 +4,5 @@ category: faqs
 question: "How do I extend GeoNode?"
 keywords:
   - devs
-link_docs: "tutorials/devel/projects/projectsintro.html"
+link_docs: "advanced/index.html#geonode-django-contrib-apps"
 ---
