--- a/faqs/_posts/0100-01-21-future.md
+++ b/faqs/_posts/0100-01-21-future.md
@@ -4,5 +4,5 @@ category: faqs
 question: "How is the future of GeoNode decided?"
 keywords:
   - devs
-link_docs: "organizational/roadmap.html"
+link_docs: "about/index.html#roadmap"
 ---
