--- a/faqs/_posts/0100-01-22-improve.md
+++ b/faqs/_posts/0100-01-22-improve.md
@@ -4,5 +4,5 @@ category: faqs
 question: "How can I suggest significant improvements or changes to GeoNode?"
 keywords:
   - devs
-link_docs: "organizational/comm_bylaws.html#geonode-improvement-proposals-gnips"
+link_docs: "about/index.html#get-in-touch-with-the-community"
 ---
