--- a/faqs/_posts/0100-01-20-patches.md
+++ b/faqs/_posts/0100-01-20-patches.md
@@ -4,5 +4,5 @@ category: faqs
 question: "How are patches for GeoNode reviewed?"
 keywords:
   - devs
-link_docs: "organizational/contribute/review_process.html"
+link_docs: "contribute/index.html#report-problems-on-the-issue-tracking-system"
 ---
